Add description for episodes
